@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.5"
+  VERSION = "1.0.6"
 end
